--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "mongoose": "^7.4.5",
     "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^3.0.1",
+    "querystring": "^0.2.1",
     "util": "^0.12.5"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^16.2.1"
   }
 }
